# flask-quickstart

./: .dockerignore  .gitignore  .markdown-link-check.json  .markdownlint.json  .mega-linter.yml  .pre-commit-config.yaml  Dockerfile  README.md  app.py  app_env.toml  gunicorn.conf.py  main.py  package-lock.json  package.json  playwright.config.ts  prepare-qodana.sh  pyproject.toml  qodana.yaml  qodana_requirements.txt  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: e2e.yml  mega-linter.yml  playwright.yml  pytest.yml  python-venv.yml  qodana_code_quality.yml
.husky/: pre-commit
_app/: create_app.py
_app/blueprints/: hello.py  login.py  variable_rules.py
_app/blueprints/routing/: login.py  unique_urls_redirection_behavior.py
_app/factories/: create_app.py
app/: .gitignore  __init__.py
app/blueprints/: api_with_json.py  cookies.py  file_upload.py  html_escaping.py  index.py  logger.py  login.py  redirects_and_errors.py  rendering_templates.py  search.py  sitemap.py
app/blueprints/routing/: unique_urls_redirection_behavior.py  variable_rules.py
app/helpers/: url.py
app/services/: file_upload.py
app/templates/: file_upload.html  get_cookie.html  hello.html  index.html  login.html  search.html  set_cookie.html  upload_completed.html
app/templates/parts/: footer.j2  sitemap.j2
e2e/: login.spec.ts
static/: login.css
templates/: hello.html  login.html
tests/: conftest.py  test_app.py
tests/blueprints/: test_cookies.py  test_file_upload.py  test_logger.py  test_login.py  test_search.py
tests/json/: user.schema.json  users.schema.json
tests/support/: json_helper.py
tests/support/test_login/: outsider.json  valid.json  wrong_password.json
