[tool.poetry]
name = "flask-quickstart"
version = "0.1.0"
description = "My first app by Flask."
authors = ["Noritaka IZUMI <noritaka.izumi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "flask_quickstart" }]

[tool.poetry.dependencies]
python = "^3.8.1"  # for flake8 6.0.0
poetry = "^1.5.1"
poethepoet = "^0.21.1"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
gevent = "^23.7.0"

[tool.poetry.group.dev.dependencies]
pip-autoremove = "^0.10.0"
watchdog = "^3.0.0"
pysen = "0.10.5"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
djlint = "^1.32.1"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# scripts
[tool.poe.env]
PYTHONPATH = "app"
_FORM_PASSWORD = "password" # サンプルプログラムで使用
[tool.poe.tasks]
start = "flask run"
debug = "poe start --debug"
lint = ["lint-py", "lint-html"]
lint-py = ["lint-py-style", "lint-py-bandit"]
lint-py-style = "pysen run lint"
lint-py-one = "pysen run_files lint"
lint-py-bandit = "bandit -c pyproject.toml -r ."
lint-html = "djlint ./app/templates"
format = ["format-py", "format-html"]
format-py = "pysen run format"
format-py-one = "pysen run_files format"
format-html = "poe lint-html --reformat"
test = "pytest"

# pysen
[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 119
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
paths = ["."]
[tool.pysen.lint.source]
includes = ["."]

[tool.djlint]
profile = "jinja"
format_css = true
format_js = true

[tool.djlint.css]
indent_size = 4

[tool.djlint.js]
indent_size = 4

[tool.bandit]
exclude_dirs = [".mypy_cache", ".venv", "tests"]
